Deemphasised 'Search Results', made it h2, made the resource <a>'s into h3s and define h3 style.

--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
@@ -39,8 +39,19 @@ $(function() {
 	}
 	
 	h2 {
-		font-size: 1em
-		; margin: 1ex 0 0 0
+		font-size: 2.4em
+		; text-indent: 1em
+		; background: #777
+		; color: white
+		; margin-bottom: 1ex
+		; border-radius: 0.5ex
+	}
+	
+	h3 {
+		background: white
+		; font-size: 120%
+		; font-weight: bold
+		; margin: 1ex
 	}
 	
 	.indented {
