--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
@@ -40,10 +40,12 @@ $(function() {
 	
 	h2 {
 		font-size: 2.4em
-		; text-indent: 1em
+		; text-indent: 1ex
 		; background: #777
 		; color: white
 		; margin-bottom: 1ex
+		; margin-left: 1ex
+		; margin-top: 0
 		; border-radius: 0.5ex
 	}
 	
