--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -103,15 +103,17 @@
 	<h2>Search Results</h2>
 	
 	<div style="margin-left: 4ex; margin-right: 4ex">
-	<b>on this page:</b>
-	#set ($pipe = "")
-	#foreach ($item in $items)
-		<span>
-			$pipe #set($pipe = " | ") <a href="#$item.id">$item.label</a>
-		</span>
+	#if ($items.size() > 1)
+		<b>on this page:</b>
+		#set ($pipe = "")
+		#foreach ($item in $items)
+			<span>
+				$pipe #set($pipe = " | ") <a href="#$item.id">$item.label</a>
+			</span>
+		#end
+		</div>
 	#end
-	</div>
-	
+		
 	<div style="margin-left: 3ex">
 		#foreach ($item in $items) 
 			<div class="itembox">
@@ -130,19 +132,20 @@
 </table>
 	
 
-<hr>
-<table width="100%">
+<hr class="hr-style">
+
+<table id="queries" style="margin: 2ex" width="100%">
 <tr>
 
 #if ($isListEndpoint)
 	<td width="50%">
-	<h3>selection query</h3>
-	<hr>
+	<h4>selection query</h4>
+	
 	<p>
 	This is the SPARQL query that was issued to select the items
 	of interest for this page.
 	</p>
-	<hr>
+	
 	<textarea class="provenance" name="query" width="45%">
 	$meta['selectionResult.query.value']
 	</textarea>
@@ -150,13 +153,13 @@
 #end
 
 <td width="50%">
-<h3>view query</h3>
-<hr>
+<h4>view query</h4>
+
 <p>
 This is the SPARQL query that was issued for the property
 chains of the view for this page.
 </p>
-<hr>
+
 <textarea class="provenance" name="query" width="45%">
 $meta['viewingResult.query.value']
 </textarea>
