--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-head-shell.vm
@@ -98,6 +98,14 @@ $(function() {
 		font-size: 120%
 	}
 	
+	.buttonlike {
+		color: black 
+		; background: #ddf
+		; border-radius: 0.5ex
+		; margin: 0 0 0 0
+		; padding: 1px
+	}
+	
 	#search-results {
 	}
 	
