--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -2,8 +2,13 @@
 #parse("page-head-shell.vm")
 <body>
 
+#set ($nextlink = $thisPage.valueOf("xhv:next"))
+#set ($prevlink = $thisPage.valueOf("xhv:prev"))
+#set ($firstlink = $thisPage.valueOf("xhv:first"))
+#set ($resourceRoot = $vars['_resourceRoot'])
+
 <div style="background: #dff; font-size: 2em">
-    <img style="float: left" src="../lda-assets/images/molecule-transparent.png">
+    <img style="float: left" src="$resourceRoot/images/molecule-transparent.png">
     <div style="float: left; margin-left: 1ex; margin-top: 5px">Elda Standalone: Linked Data API</div>
     <img style="float: right; margin-right: 1ex" src="http://elda.googlecode.com/hg/docs/epilogo-240.png">
     <div style="clear: both"> </div>
@@ -15,10 +20,6 @@
     	$pipe #set ($pipe = " | ") <a href="$f.link">$f.name</a>
     #end			
 </div>
-
-#set ($nextlink = $thisPage.valueOf("xhv:next"))
-#set ($prevlink = $thisPage.valueOf("xhv:prev"))
-#set ($firstlink = $thisPage.valueOf("xhv:first"))
 
 #macro (tag, $property, $value)
     "Select items with $property.shortForm() less than $value"
