--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -1,11 +1,12 @@
-<html>
-#parse("page-head-shell.vm")
-<body>
-
 #set ($nextlink = $thisPage.valueOf("xhv:next"))
 #set ($prevlink = $thisPage.valueOf("xhv:prev"))
 #set ($firstlink = $thisPage.valueOf("xhv:first"))
 #set ($resourceRoot = $vars['_resourceRoot'])
+#set ($path = $vars['_rootPath'])
+
+<html>
+#parse("page-head-shell.vm")
+<body>
 
 <div style="background: #dff; font-size: 2em">
     <img style="float: left" src="$resourceRoot/images/molecule-transparent.png">
@@ -68,7 +69,7 @@
 >&Delta;</a></span>
 
 <span>
-<a href="item.vhtml?_properties=*.*.*&resource=$value.URI.raw().replaceAll("#", "%23")"
+<a href="$path/item.vhtml?_properties=*.*.*&resource=$value.URI.raw().replaceAll("#", "%23")"
 	title="Click to see properties of this resource."
 >$value.label</a>
 </span>
