Corrected typo. Used Document.png rather than &Delta;.

--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-foot-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-foot-shell.vm
@@ -6,7 +6,7 @@
 			<a href="http://code.google.com/p/linked-data-api">Linked Data API</a>
 	</p>
 	<p>
-		<a href="http://www.axialis.com/free/icons">Icons</a>
-		by <a href="http://www.axialis.com">Axialis Team</a>
+		Includes <a href="http://www.axialis.com/free/icons">icons</a>
+		by <a href="http://www.axialis.com">Axialis Team</a>.
 	</p>
 </footer>
